# oceanSimulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
shaders/: ocean.frag  ocean.vert  sky.frag  sky.vert  terrain.frag  terrain.vert
src/: constants.hpp  main.cpp
src/app/: camera.hpp  ui.hpp
src/math/: linalg.hpp
src/ocean/: ocean_mesh.hpp  params.hpp  terrain_mesh.hpp
src/renderer/: mesh.hpp  shader.hpp
